# k_nova

./: .gitignore  .testr.conf  PKG-INFO  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt
etc/: nova.conf  nova_compute.conf  policy.json
etc/nova/: policy.json
etc/sql/: nova_DB2_to_MYSQL.sql
nova_extension/api/metadata/: base.py
nova_extension/compute/: manager.py
nova_extension/compute/ibm/: configuration_strategy.py  configuration_strategy_common.py  configuration_strategy_ovf.py  configuration_strategy_sysprep.py  etree_wrapper.py  update_configuration_strategy.py
nova_extension/virt/powervm/: __init__.py  blockdev.py  command.py  common.py  constants.py  driver.py  exception.py  lpar.py  operator.py
paxes_nova/: __init__.py  exception.py
paxes_nova/cmd/: wsshproxy.py
paxes_nova/compute/: __init__.py  api.py  exception.py  manager.py  notify_messages.py  remanage.py
paxes_nova/conductor/: api.py  manager.py  rpcapi.py
paxes_nova/consoleauth/: manager.py
paxes_nova/db/: api.py
paxes_nova/network/: __init__.py  placement.py
paxes_nova/objects/: dom.py  olddom.py  transaction.py
paxes_nova/scheduler/: __init__.py  baremetal_host_manager.py  caching_scheduler.py  chance.py  driver.py  filter_scheduler.py  host_manager.py  manager.py  rpcapi.py
paxes_nova/storage/: common.py  exception.py  hmc_k2.py  kvm_storage_mapping.py  static_topology.py  storage_mapping_api.py  storage_utils.py
paxes_nova/virt/: __init__.py  discovery_driver.py  interfaces.template  netutils.py
paxes_nova/volume/: cinder.py
(+145 files in other folders)
