[metadata]
name = paxes-nova
version = 2015.1
summary = 'Cloud computing fabric controller extension'
home-page = 'http://www.openstack.org/'
author = 'New cloud open stack development team'
author-email = 'openstack-dev@teamsun.com.cn'
license = ''
description-file = 
    README.txt
platform = ''
classifier = 
    Environment :: OpenStack
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6


[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    paxes_nova
data_files = 
    /etc/paxesSQL =
        etc/sql/nova_DB2_to_MYSQL.sql
scripts = 
    bin/openstack-config
    bin/nova-wsshproxy
    bin/paxes-console-terminal
    bin/paxesnova-dbsync

[entry_points]
nova.api.v2.extensions =
    hypervisor_state = paxes_nova.api.plugins.hypervisor_state:Hypervisor_state

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
